log/build_2024-09-17_19-23-38/webots_ros2_homework1_python/stderr.log
  File "/home/liam/f24_robotics/install/webots_ros2_homework1_python/lib/python3.10/site-packages/webots_ros2_homework1_python/webots_ros2_homework1_python.py", line 147
    return
    ^^^^^^
SyntaxError: 'return' outside function

